# skedit

./: CONTRIBUTING.md  Cargo.toml  LICENSE.Unseen  README.md
crates/ske/: Cargo.toml
crates/ske/src/: buck.rs  dirs.rs  index.rs  lib.rs  template.rs
crates/skyde/: Cargo.toml
crates/skyde/src/: big.rs  graph.rs  gutter.rs  main.rs  piece.rs  recent.rs  tree.rs
docs/: 00-plan.md  01-architecture.md  02-template-system.md  README.md
skedit-cli/: Cargo.toml  README.md  file.buck
skedit-cli/src/: main.rs
src/: main.rs
templates/cc/: cc.skedit.toml
templates/rust/: rust.skedit.toml
templates/rust/scaffold/binary/: BUCK.tmpl
templates/rust/scaffold/binary/src/: main.rs.tmpl
testfiles/: file1.buck  file2.buck
testfiles/demo/: BUCK
testfiles/demo/src/: lib.rs
